tests/compile_fail/as_ref/unknown_struct_attr_arg.stderr
error[E0412]: cannot find type `baz` in this scope
 --> tests/compile_fail/as_ref/unknown_struct_attr_arg.rs:2:10
  |
2 | #[as_ref(baz)]
  |          ^^^ not found in this scope
